# fixed-point-math

./: CMakeLists.txt  log2.cpp  log2.hpp  rsqrt-bits.py  rsqrt-table.py  rsqrt.cpp  rsqrt.hpp  rsqrt_table.cpp  rsqrt_table.hpp  sin_cos.cpp  sin_cos.hpp  sin_table.py  sqrt.cpp  sqrt.hpp
